dark mode fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -10879,6 +10879,13 @@ hr.divider-light {
   font-weight: 700;
   color: #212529;
 }
+
+@media (prefers-color-scheme: dark) {
+  #mainNav .navbar-brand {
+      color: white;
+  }
+}
+
 #mainNav .navbar-nav .nav-item .nav-link {
   color: #6c757d;
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -10892,6 +10899,13 @@ hr.divider-light {
 #mainNav .navbar-nav .nav-item .nav-link.active {
   color: #f4623a !important;
 }
+
+@media (prefers-color-scheme: dark) {
+  #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
+    color: white;
+  }
+}
+
 @media (min-width: 992px) {
   #mainNav {
     box-shadow: none;
